# cookies

./: README.md
fastapi-react/: cookiecutter.json
fastapi-react/hooks/: post_gen_project.sh
fastapi-react/{{cookiecutter.directory_name}}/: Makefile  README.md
fastapi-react/{{cookiecutter.directory_name}}/scripts/: deploy.sh  install.sh
fastapi-react/{{cookiecutter.directory_name}}/server/: main.py  pyproject.toml
fastapi-react/{{cookiecutter.directory_name}}/web/: package.json
fastapi-react/{{cookiecutter.directory_name}}/web/public/: app.yaml  index.html
fastapi-react/{{cookiecutter.directory_name}}/web/src/: App.js
fastapi-react/{{cookiecutter.directory_name}}/web/src/components/: index.jsx
