[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-firestore = "^1.7.0"
httpx = "^0.13.3"
fastapi = {extras = ["all"], version = "^0.55.1"}
uvicorn = "^0.11.5"
setuptools = "^47.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
